# educational-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/: hf_inference.py
src/chatbot/: hf_inference.py  main.py  model.py
streamlit/: config.toml
