[tool.poetry]
name = "educational-app"
version = "0.1.0"
description = "App for school students"
authors = ["Varsha R <varsharamineni@gmail.com>", "Jim Karpodinis <dkarpodinis2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
streamlit = "1.42.0"
langchain = "0.3.18"
huggingface-hub = "0.28.1"
httpx = "0.28.1"
transformers = "^4.48.3"
torch = "^2.6.0"
aiohappyeyeballs = "2.4.6"
aiohttp = "3.11.12"
aiosignal = "1.3.2"
altair = "5.5.0"
annotated-types = "0.7.0"
anyio = "4.8.0"
attrs = "25.1.0"
blinker = "1.9.0"
cachetools = "5.5.1"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.8"
distro = "1.9.0"
filelock = "3.17.0"
frozenlist = "1.5.0"
fsspec = "2025.2.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
h11 = "0.14.0"
httpcore = "1.0.7"
idna = "3.10"
jinja2 = "3.1.5"
jiter = "0.8.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
langchain-core = "0.3.34"
langchain-ollama = "0.2.3"
langchain-text-splitters = "0.3.6"
langsmith = "0.3.7"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
multidict = "6.1.0"
narwhals = "1.25.2"
ollama = "0.4.7"
openai = "1.61.1"
orjson = "3.10.15"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.1.0"
pip = "25.0"
propcache = "0.2.1"
protobuf = "5.29.3"
pyarrow = "19.0.0"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
pydeck = "0.9.1"
pygments = "2.19.1"
python-dateutil = "2.9.0.post0"
pytz = "2025.1"
pyyaml = "6.0.2"
referencing = "0.36.2"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.22.3"
setuptools = "75.8.0"
six = "1.17.0"
smmap = "5.0.2"
sniffio = "1.3.1"
sqlalchemy = "2.0.38"
tenacity = "9.0.0"
toml = "0.10.2"
tornado = "6.4.2"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
tzdata = "2025.1"
urllib3 = "2.3.0"
wheel = "0.45.1"
yarl = "1.18.3"
zstandard = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
